# PracticeFor

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  readme.md
cmake/: Cortex-M3.cmake  mcu-toolchain.cmake
src/: CMakeLists.txt
src/PMU/: main.cpp
tools/: gd32f1x.cfg  openocd-jlink-swd.cfg
